--- a/Algebra/05.03.2019/TangLin_Correction_05.03.2019.tex
+++ b/Algebra/05.03.2019/TangLin_Correction_05.03.2019.tex
@@ -79,7 +79,16 @@
                     \Rightarrow R\bigtriangleup S \in \mathscr{M}(A)$
                 \item Zero element exists:
                     Consider empty set in $\mathscr{M}(A)$\\
-                    $\forall R \in \mathscr{M}(A),$
+                    $\forall R \in \mathscr{M}(A), R \bigtriangleup \emptyset = \emptyset \bigtriangleup R = R$\\
+                We have proved that it is a group.    
             \end{enumerate}
+
+        \item Satisfy the law of distribution.\\
+           From nature 3 of operation symmetric difference, we can get it.
+        
+        \item  Closure of operation intersection.
+            $\forall R,S \subset A \Rightarrow R \cap S \subset A$
     \end{enumerate}
+
+    We have proved that $(\mathscr{M}(A),\bigtriangleup,\cap)$ is a ring.
 \end{document}
